--- a/product-template.liquid
+++ b/product-template.liquid
@@ -1,4 +1,14 @@
-/* Your swatches or image thumbnails that you want to allow the user to click on to change the current product variant displayed in the media section (product images) and update quantities, etc as well as the behaviour of the Add to Cart button. These are just eaxmples of two color swatches */
+/* 
+
+Your swatches or image thumbnails that you want to allow the user to click on to change the current product variant displayed in the 
+media section (product images) and update quantities, etc authentically (as though the user actually changed the variant by clicking on the <select>) 
+as well as the behaviour of the Add to Cart button. 
+
+These are just example of two color variants that you might have. 
+
+There are hackier ways to do this, but here we want to maintain the product variant change functionality in its totality (not just change the image)
+
+*/
 
 <div class="Variant_Black"></div>
 <div class="Variant_White"></div>
