--- a/product-template.liquid
+++ b/product-template.liquid
@@ -20,7 +20,7 @@ There are hackier ways to do this, but here we want to maintain the product vari
          <select class="single-option-selector single-option-selector-product-template product-form__input"
             id="SingleOptionSelector-0"
             data-index="option1">
-              <option value="Back" selected="selected">Black</option>
+              <option value="Black" selected="selected">Black</option>
               <option value="White">White</option>
          </select>
      </div>
